# aipi

./: Cargo.toml  README.md
examples/: conversation.rs  maintenance.rs
src/: client.rs  environment.rs  lib.rs  main.rs  message.rs  models.rs
src/client/: claude.rs
src/message/: serde.rs
src/message/serde/: chatgpt.rs  claude.rs
src/models/: maintenance.rs
