[package]
name = "aipi"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["json"] }
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

strum = { version = "0.27.2", features = ["strum_macros"], optional = true }
strum_macros = { version = "0.27.2", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }

[features]
default = []
dev-tools = ["strum", "strum_macros"]
